--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -18,18 +18,31 @@ on:
         required: true
 
 permissions:
-  id-token: write # allows the JWT to be requested from GitHub's OIDC provider
-  contents: read # This is required for actions/checkout
+  id-token: write # Allows the JWT to be requested from GitHub's OIDC provider
+  contents: read # Required for actions/checkout
 
 env:
   NODE_OPTIONS: '--no-warnings'
 
 jobs:
+  validate-actor:
+    # Run validation for workflow_dispatch with tags
+    if: >
+      github.event_name == 'workflow_dispatch' &&
+      startsWith(github.ref, 'refs/tags/v')
+    uses: ./.github/workflows/validate-actor.yml
+    secrets:
+      PAT: ${{ secrets.PAT }}
+
   deploy:
+    needs: [validate-actor]
     name: Deploy to NPM
-    # As we publish the NPM package with provenance, we need to only use the GitHub hosted runners
+    # As we publish the NPM package with provenance, we must use GitHub-hosted runners
     runs-on: ubuntu-latest
-    if: ${{ inputs.is_called == 'true' || (github.event_name == 'workflow_dispatch' && startsWith(github.ref, 'refs/tags/v')) }}
+    # Deploy if validate-actor was successful or skipped
+    # or if the workflow was invoked by another workflow
+    if: >
+      (needs.validate-actor.result == 'success' || needs.validate-actor.result == 'skipped') || inputs.is_called == 'true'
 
     steps:
       - name: Checkout
