--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,29 +8,9 @@ on:
       - closed
 
 jobs:
-  validate-actor:
-    # Run only for workflow_dispatch events
-    if: github.event_name == 'workflow_dispatch'
-    uses: ./.github/workflows/validate-actor.yml
-    secrets:
-      PAT: ${{ secrets.PAT }}
-
   deploy:
-    needs: [validate-actor]
     name: Deploy to Development Environment
-    if: >
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.merged == true
-      ) ||
-      (
-        github.event_name == 'workflow_dispatch' &&
-        (
-          startsWith(github.ref, 'refs/tags/v') ||
-          github.ref == 'refs/heads/develop' ||
-          github.ref == 'refs/heads/main'
-        )
-      )
+    if: github.event.pull_request.merged == true
     uses: ./.github/workflows/deploy.yml
     with:
       environment: 'development'
