--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -25,26 +25,11 @@ env:
   NODE_OPTIONS: '--no-warnings'
 
 jobs:
-  validate-actor:
-    # Run validation for workflow_dispatch
-    if: github.event_name == 'workflow_dispatch'
-    uses: ./.github/workflows/validate-actor.yml
-    secrets:
-      PAT: ${{ secrets.PAT }}
-
   deploy:
-    needs: [validate-actor]
     name: Deploy to NPM
     # As we publish the NPM package with provenance, we must use GitHub-hosted runners
     runs-on: ubuntu-latest
-    # Deploy if validate-actor was successful or skipped
-    # or if the workflow was invoked by another workflow
-    if: >
-      inputs.is_called == 'true' ||
-      (
-        github.event_name == 'workflow_dispatch' &&
-        startsWith(github.ref, 'refs/tags/v')
-      )
+    if: ${{ inputs.is_called == 'true' || (github.event_name == 'workflow_dispatch' && startsWith(github.ref, 'refs/tags/v')) }}
 
     steps:
       - name: Checkout
