--- a/.github/workflows/trigger-test-suites.yml
+++ b/.github/workflows/trigger-test-suites.yml
@@ -52,11 +52,12 @@ jobs:
           GH_TOKEN: ${{ secrets.PAT }}
         run: |
           gh api \
-            -X POST \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/rudderlabs/rudder-client-side-test/actions/workflows/sdk-team-js-sanity-suite.yaml/dispatches" \
-            -f ref=main \
-            -F inputs.environment=${{ inputs.environment }} \
-            -F inputs.monorepo_version=${{ needs.extract-monorepo-version.outputs.version }}
+            -f "ref=main" \
+            -f "inputs[environment]=${{ inputs.environment }}" -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}"
 
   trigger-e2e-test-suite:
     runs-on: [self-hosted, Linux, X64]
@@ -68,8 +69,9 @@ jobs:
           GH_TOKEN: ${{ secrets.PAT }}
         run: |
           gh api \
-            -X POST \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/rudderlabs/rudder-client-side-test/actions/workflows/sdk-team-js-regression.yaml/dispatches" \
-            -f ref=main \
-            -F inputs.environment=${{ inputs.environment }} \
-            -F inputs.monorepo_version=${{ needs.extract-monorepo-version.outputs.version }}
+            -f "ref=main" \
+            -f "inputs[environment]=${{ inputs.environment }}" -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}"
