--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           HUSKY: 0
         run: |
-          npm run setup:ci
+          npm run setup:test
 
       - name: Check for affected projects
         id: check_affected
