--- a/examples/nextjs/page-router/sample-app/.eslintrc.json
+++ b/examples/nextjs/page-router/sample-app/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-throw-literal": "off"
+  }
 }
