--- a/nx.json
+++ b/nx.json
@@ -23,7 +23,7 @@
     }
   },
   "targetDefaults": {
-    "test": {
+    "test*": {
       "inputs": ["test"],
       "cache": true
     },
@@ -33,40 +33,28 @@
         "projects": "dependencies"
       }
     ],
-    "build*": {
+    "*build*": {
       "inputs": ["default"],
       "cache": true
     },
-    "check:size:build": {
-      "inputs": ["default"],
-      "cache": true
-    },
-    "check:size:json": {
-      "inputs": [
-        "default",
-        "{projectRoot}/.size-limit.js",
-        "{projectRoot}/.size-limit.mjs"
-      ],
+    "check:size:json*": {
+      "inputs": ["default", "{projectRoot}/.size-limit.js", "{projectRoot}/.size-limit.mjs"],
       "cache": true
     },
     "check:pub": {
       "inputs": ["{projectRoot}/package.json"],
       "cache": true
     },
-    "test:pre-commit:affected": {
-      "inputs": ["test"],
-      "cache": true
-    },
-    "check:size:build:pre-commit:affected": {
+    "check:circular": {
       "inputs": ["default"],
       "cache": true
     },
-    "check:size:json:pre-commit:affected": {
-      "inputs": [
-        "default",
-        "{projectRoot}/.size-limit.js",
-        "{projectRoot}/.size-limit.mjs"
-      ],
+    "check:duplicates": {
+      "inputs": ["default", "{projectRoot}/.jscpd.json", "{workspaceRoot}/.jscpd.json"],
+      "cache": true
+    },
+    "check:lint*": {
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/.eslintignore"],
       "cache": true
     }
   },
@@ -80,66 +68,43 @@
       "{workspaceRoot}/.nvmrc",
       {
         "runtime": "node --version"
-      }
+      },
+      "{workspaceRoot}/package.json",
+      "{workspaceRoot}/package-lock.json",
+      "{workspaceRoot}/nx.json",
+      "{workspaceRoot}/tsconfig.build.json",
+      "{workspaceRoot}/tsconfig.json",
+      "{workspaceRoot}/tsconfig.paths.json"
     ],
     "default": [
       "sharedGlobals",
-      "{projectRoot}/**/*",
+      "{projectRoot}/src/**/*",
+      "{projectRoot}/package.json",
+      "{projectRoot}/project.json",
+      "{projectRoot}/rollup.config.mjs",
+      "{projectRoot}/babel.config.json",
+      "{projectRoot}/tsconfig.json",
       "!{projectRoot}/src/**/*.(spec|test).(j|t)s?(x)",
-      "!{projectRoot}/__tests__/**/*",
-      "!{projectRoot}/__fixtures__/**/*",
-      "!{projectRoot}/__mocks__/**/*",
-      "!{projectRoot}/.env.example",
-      "!{projectRoot}/public/**/*",
-      "!{projectRoot}/LICENSE.md",
       "!{projectRoot}/**/*.md",
       "!{projectRoot}/**/*.txt",
-      "!{projectRoot}/serve.json",
-      "!{projectRoot}/.size-limit.js",
-      "!{projectRoot}/.size-limit.mjs",
-      "!{projectRoot}/.jscpd.json",
-      "!{projectRoot}/.prettierignore",
-      "!{projectRoot}/.eslintignore",
-      "!{projectRoot}/.eslintrc",
-      "{workspaceRoot}/tsconfig.build.json",
-      "{workspaceRoot}/tsconfig.json",
-      "{workspaceRoot}/tsconfig.paths.json",
-      "{workspaceRoot}/package.json",
-      "{workspaceRoot}/package-lock.json",
-      "{workspaceRoot}/babel.config.json",
       "{workspaceRoot}/types/**/*",
-      "{workspaceRoot}/nx.json"
+      "{workspaceRoot}/babel.config.json"
     ],
     "test": [
       "sharedGlobals",
-      "{projectRoot}/**/*",
-      "!{projectRoot}/.env.example",
-      "!{projectRoot}/public/**/*",
-      "!{projectRoot}/LICENSE.md",
+      "{projectRoot}/src/**/*",
+      "{projectRoot}/package.json",
+      "{projectRoot}/project.json",
       "!{projectRoot}/**/*.md",
       "!{projectRoot}/**/*.txt",
-      "!{projectRoot}/serve.json",
-      "!{projectRoot}/.size-limit.js",
-      "!{projectRoot}/.size-limit.mjs",
-      "!{projectRoot}/.jscpd.json",
-      "!{projectRoot}/.prettierignore",
-      "!{projectRoot}/.eslintignore",
-      "!{projectRoot}/.eslintrc",
-      "{workspaceRoot}/tsconfig.build.json",
-      "{workspaceRoot}/tsconfig.json",
-      "{workspaceRoot}/tsconfig.paths.json",
-      "{workspaceRoot}/package.json",
-      "{workspaceRoot}/package-lock.json",
-      "{workspaceRoot}/babel.config.json",
-      "{workspaceRoot}/types/**/*",
-      "{workspaceRoot}/nx.json",
       "{projectRoot}/src/**/*.(spec|test).(j|t)s?(x)",
       "{projectRoot}/__tests__/**/*",
       "{projectRoot}/__fixtures__/**/*",
       "{projectRoot}/__mocks__/**/*",
       "{projectRoot}/jest.config.mjs",
       "{workspaceRoot}/jest/**/*",
-      "{workspaceRoot}/jest.preset.js"
+      "{workspaceRoot}/jest.preset.js",
+      "{projectRoot}/tsconfig.spec.json"
     ]
   }
 }
