--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -93,9 +93,7 @@
     "@rudderstack/analytics-js-common": "*",
     "ramda": "0.30.1"
   },
-  "devDependencies": {
-    "@bugsnag/js": "6.5.2"
-  },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
