--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -138,7 +138,9 @@
     "package": "npm pack",
     "release": "npm publish"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@bugsnag/js": "8.1.2"
+  },
   "browserslist": {
     "production": [
       "> 0.1%",
