--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -9,7 +9,6 @@ on:
         type: choice
         options:
           - development
-          - staging
           - production
         default: 'development'
 
@@ -47,13 +46,35 @@ jobs:
     runs-on: [self-hosted, Linux, X64]
 
     steps:
+      - name: Configure environment variables
+        run: |
+          echo "DATE=$(date)" >> $GITHUB_ENV
+
+          # TODO: Remove the below once the dev testing is done
+          if [ "${{ inputs.environment }}" == "production" ]; then
+            AWS_ACCOUNT_ID="${{ secrets.AWS_PROD_ACCOUNT_ID }}"
+            AWS_S3_SYNC_ROLE="${{ secrets.AWS_PROD_S3_SYNC_ROLE }}"
+            AWS_S3_BUCKET_NAME="${{ secrets.AWS_PROD_S3_BUCKET_NAME }}"
+            AWS_CF_DISTRIBUTION_ID="${{ secrets.AWS_PROD_CF_DISTRIBUTION_ID }}"
+          elif [ "${{ inputs.environment }}" == "development" ]; then
+            AWS_ACCOUNT_ID="${{ secrets.AWS_DEV_ACCOUNT_ID_TEMP }}"
+            AWS_S3_SYNC_ROLE="${{ secrets.AWS_DEV_S3_SYNC_ROLE_TEMP }}"
+            AWS_S3_BUCKET_NAME="${{ secrets.AWS_DEV_S3_BUCKET_NAME_TEMP }}"
+            AWS_CF_DISTRIBUTION_ID="${{ secrets.AWS_DEV_CF_DISTRIBUTION_ID_TEMP }}"
+          fi
+
+          echo "AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME" >> $GITHUB_ENV
+          echo "AWS_CF_DISTRIBUTION_ID=$AWS_CF_DISTRIBUTION_ID" >> $GITHUB_ENV
+          echo "AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID" >> $GITHUB_ENV
+          echo "AWS_S3_SYNC_ROLE=$AWS_S3_SYNC_ROLE" >> $GITHUB_ENV
+
       - name: Install AWS CLI
         uses: unfor19/install-aws-cli-action@master
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_PROD_ACCOUNT_ID }}:role/${{ secrets.AWS_PROD_S3_SYNC_ROLE }}
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.AWS_S3_SYNC_ROLE }}
           aws-region: us-east-1
 
       - name: Checkout source code
@@ -68,25 +89,6 @@ jobs:
 
           legacy_sdk_rollback_version=$(jq -r .version packages/analytics-v1.1/package.json)
           echo "LEGACY_SDK_ROLLBACK_VERSION_VALUE=$legacy_sdk_rollback_version" >> $GITHUB_ENV
-
-      - name: Configure environment variables
-        run: |
-          echo "DATE=$(date)" >> $GITHUB_ENV
-
-          # TODO: Remove the below once the dev testing is done
-          if [ "${{ inputs.environment }}" == "production" ]; then
-            AWS_S3_BUCKET_NAME="${{ secrets.AWS_PROD_S3_BUCKET_NAME }}"
-            AWS_CF_DISTRIBUTION_ID="${{ secrets.AWS_PROD_CF_DISTRIBUTION_ID }}"
-          elif [ "${{ inputs.environment }}" == "staging" ]; then
-            AWS_S3_BUCKET_NAME="${{ secrets.AWS_STAGING_S3_BUCKET_NAME_TEMP }}"
-            AWS_CF_DISTRIBUTION_ID="${{ secrets.AWS_STAGING_CF_DISTRIBUTION_ID_TEMP }}"
-          elif [ "${{ inputs.environment }}" == "development" ]; then
-            AWS_S3_BUCKET_NAME="${{ secrets.AWS_DEV_S3_BUCKET_NAME_TEMP }}"
-            AWS_CF_DISTRIBUTION_ID="${{ secrets.AWS_DEV_CF_DISTRIBUTION_ID_TEMP }}"
-          fi
-
-          echo "AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME" >> $GITHUB_ENV
-          echo "AWS_CF_DISTRIBUTION_ID=$AWS_CF_DISTRIBUTION_ID" >> $GITHUB_ENV
 
       - name: Copy the core SDK artifacts from the previous version to the latest version directory
         run: |
