--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -11,6 +11,9 @@ on:
           - development
           - production
         default: 'development'
+      tag:
+        required: true
+        type: string
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.sha }}
@@ -34,7 +37,7 @@ env:
 jobs:
   validate-actor:
     # Only allow to be deployed from tags and main branch
-    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
+    # if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
     uses: ./.github/workflows/validate-actor.yml
     with:
       team_names: 'js-sdk,integrations'
@@ -78,17 +81,23 @@ jobs:
           aws-region: us-east-1
 
       - name: Checkout source code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.sha }}
+        # uses: actions/checkout@v4
+        # with:
+        #   ref: ${{ github.sha }}
+        run: |
+          git clone https://github.com/rudderlabs/rudder-sdk-js.git
+          cd rudder-sdk-js
+          git checkout ${{ inputs.tag }}
 
       - name: Get rollback sdk versions
         run: |
           rollback_version=$(jq -r .version packages/analytics-js/package.json)
           echo "ROLLBACK_VERSION_VALUE=$rollback_version" >> $GITHUB_ENV
+          echo "Rollback version: $rollback_version"
 
           legacy_sdk_rollback_version=$(jq -r .version packages/analytics-v1.1/package.json)
           echo "LEGACY_SDK_ROLLBACK_VERSION_VALUE=$legacy_sdk_rollback_version" >> $GITHUB_ENV
+          echo "Legacy SDK rollback version: $legacy_sdk_rollback_version"
 
       - name: Copy the core SDK artifacts from the previous version to the latest version directory
         run: |
@@ -132,6 +141,7 @@ jobs:
 
       - name: Send message to Slack channel
         id: slack
+        if: false
         continue-on-error: true
         uses: slackapi/slack-github-action@v1.27.0
         env:
